--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^2.2.4",
     "express": "^4.11.2",
     "express-flash": "0.0.2",
+	"express-session": "^1.15.2",
     "mongoose": "^4.9.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
